--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.sidebar{
+  min-height: 100vh;   
+  background-color: #333;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#body-row {
+  margin-left:0;
+  margin-right:0;
 }
+
+.sticky-offset {
+  top: 100px !important;
+}
+.sticky-offset-margin{
+  margin-top: 100px !important;
+}
+
+.main-container{
+  min-height: 100vh;  
+  padding: 0;
+}
+
+.content {
+  background-color: white;
+  padding: 20px;
+  border: solid 1px;
+  margin: 10px;
+}
+
+.content h4,p,h5 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.btn:hover {
+  background-color: #ddd;
+  color: #333 !important;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+
+.btn{
+  color: white !important;
+}
+
